# Rust-Server

./: Cargo.toml  README.md
migrations/: 01_create_users_table.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
src/services/: user_service.rs
