[package]
name = "rust-4"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
tokio-postgres = "0.7"
deadpool-postgres = "0.14.0"
bcrypt = "0.13"
jsonwebtoken = "8.0"
dotenv = "0.15"